
    | #define err(format, ...) f(debug)werror("ERROR: "+format, ##__VA_ARGS__)

  and the variable argument is left out when the err macro is used,
  then the comma before the ‘##’ will be deleted. This does not
  happen if you pass an empty argument, nor does it happen if the
  token preceding ‘##’ is anything other than a comma.

o The preprocessor can now be run with a cpp prefix feature.

  This is currently used by the precompiler to avoid two levels of
  preprocessing, one using "#cmod_" as the prefix and the other "#".

o Dynamic macros

  You can now add programatic macros. There is currently no syntax
  that can be used to define these while compiling code, but you can
  add them from one program before compiling plug-ins/modules.

  The main use is macros like DEBUG(...) and IFDEBUG() that would
  expand to something if a debug setting is enabled in the module but
  nothing otherwise, or, to take an actual example from the Opera
  Mini source code:

    | add_predefine( "METRIC()",
    |     lambda( string name, string ... code )
    |     {
    |         string type = type_of( code );
    |         string aggregate = aggregate_of( code );
    |         string format = format_of( code );
    |         code -= ({ 0 });
    |         return replace( base_metric_class,
    |                     (["ID":(string)next_metric_id++,
    |                       "NAME":stringify(name),
    |                       "TYPE":type,
    | 			   "AGGREGATE":aggregate,
    | 			   "FORMAT":format,
    |                       "CODE":make_value_function(code),
    |                    ]));
    |      });


  That is, a macro that needs does some calculations, and rewrite the
  code more than is possible in normal macros..

  This one expands something along the lines of

    | METRIC("requests", Summarize, PerSecond,
    |        floating_average_diff(requests));

  into

    | class Metric_requests_01
    | {
    |    inherit Server.Metric;